1.3
---
Configuration howto/support for Oracle.
Tested on Weblogic.
Function to batch-generate PEM-files for Apache etc.
Function to rollover subCA with same key pair in ca.sh/cmd.
Architectural overview in documentation.
Better deployment scripts.
Sample Linux firewall script.
Added demo accept-all authentication module, NullAuthenticationSession.
CA-certs can now be downloaded from webdist.
Lots of minor cosmetic, architectural and GUI changes.

1.2
---
Command for batch processing, and other batch fixes.
Better error messages when user applies for cert with browser.
Fixed bug where NextUpdate in CRLs were incorrect.
Fixed problem receiving certificate replies for subCAs.
Function to rollover Root CA with same key pair in ca.sh/cmd.
Listusers function in ra.sh/cmd.
Info function in ca.sh/cmd.
Minor improvements and bugfixes.

1.1
---
Tested with additional databases (mySQL, PostgreSQL).
The Datasource used is configurable.
New architecture for Publishers where certificates can be published in addition
to the main database.
Change DN order to match RFC1779. WARNING! See doc/RELEASE_NOTES for information
about upgrading from v1.0.
LDAP Publisher to store for certificates and CRLs in LDAP directory.
Minor bugfixes.

1.0
---
Fixed bug with not returning correct content-length to browser when returning
PEM-certificates.
New version of BouncyCastle provider with minor PKCS12 fix.
Updated docs.
Added FAQ.

1.0b2
-----
New version of Bouncycastle JCE provider.
Added and clarified some documentation.
New version of BC provider fixed compatibility of PKCS10 requests with KeyTool
and MS CA.
Fixed process of PKCS10 request from KeyTool (they use different header).
Fixed bug during key generation of CA that always generated 1024 bit keys.
Creates p12-files during test in real temporary dir.

1.0b1
-----
Initial release